app/assets/stylesheets/master.scss
// Custom bootstrap variables must be set or imported *before* bootstrap.
@import "bootstrap";

.clear {
    clear: both;
}

.circle {
    font-weight:bold;
    position: relative;
    border-radius: 100%;
    background: #16a085;
    width: 90px;
    height: 90px;
    margin: 10px 10px;
    text-align: center;
    color: #fff;
    font-size: 14px;
    line-height: 15px;
    cursor: pointer;
}

.logo:hover {
    text-decoration: none;
}

.container-fluid {
    overflow: hidden;
}

.slogan {
    font-family: 'playfair_displayregular', serif;
    font-style: italic;
    padding: 30px 10px 0 10px;
    color: #222;
}

.links {
    padding: 30px 0 0 0;
    text-align: center;
}

.links a {
    color: #222;
    font-size: 25px;
    border: 1px solid #16a085;
    padding: 8px 15px;
    text-align: center;
    font-family: 'playfair_displayregular', serif;
    font-weight: bold;
    text-decoration: none;
}

.links a:hover {
    text-decoration: none;
    background: #16a085;
    color: #fff;
}

.more-quotes {
    padding: 10px 0 0 0;
}

.next-quote {
    color: #16a085;
    font-family: "Palatino Linotype", Palatino, Palladio, "URW Palladio L", "Book Antiqua", Baskerville, "Bookman Old Style", "Bitstream Charter", "Nimbus Roman No9 L", Garamond, "Apple Garamond", "ITC Garamond Narrow", "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;
    font-size: 24px;
}

.footer-blurb {
    font-family: "Palatino Linotype", Palatino, Palladio, "URW Palladio L", "Book Antiqua", Baskerville, "Bookman Old Style", "Bitstream Charter", "Nimbus Roman No9 L", Garamond, "Apple Garamond", "ITC Garamond Narrow", "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;
    font-style: italic;
    text-align: right;
    font-size: 12px;
    padding: 10px 0 0 0;
}

.about {
    font-family: "Palatino Linotype", Palatino, Palladio, "URW Palladio L", "Book Antiqua", Baskerville, "Bookman Old Style", "Bitstream Charter", "Nimbus Roman No9 L", Garamond, "Apple Garamond", "ITC Garamond Narrow", "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;
}

.modal {
    font-family: "Palatino Linotype", Palatino, Palladio, "URW Palladio L", "Book Antiqua", Baskerville, "Bookman Old Style", "Bitstream Charter", "Nimbus Roman No9 L", Garamond, "Apple Garamond", "ITC Garamond Narrow", "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif;
}

header {
    border-top: 9px solid #222;
}

hr {
    clear: both;
}

h1 {
    font-family: 'playfair_displayregular', cursive;
    font-weight: bold;
    font-size: 48px;
}

h2 {
    font-family: 'playfair_displayregular', sans-serif;
    font-weight: lighter;
}

h2 span {
    font-family: 'playfair_displayregular', cursive;
    color: #ddd;
}

body {
    background-color: #f5f5f5;
}

::selection {
    background-color: #16a085;
}

@media (max-width: 750px) {
    .footer-blurb {
        text-align: left;
    }
    
    .links {
        margin: 0 0 10px 0;
    }
}

